# vss-prototype

./: .gitignore  1_ingestion_pipeline.py  1_vid_emb.py  2_retrieve_app.py  2_vid_query.py  peek_collection.py  pyproject.toml  start.sh
