[project]
name = "htx-vss-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "faiss-cpu>=1.12.0",
    "flagembedding>=1.3.5",
    "joblib>=1.5.1",
    "lap>=0.5.12",
    "openai>=1.100.2",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pymilvus>=2.6.0",
    "streamlit>=1.48.1",
    "supervision>=0.26.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
    "ultralytics>=8.3.182",
]
